-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.24
-
Fix Version/s: qpid-cpp-1.40.0
-
Component/s: C++ Broker
-
Labels:None
There is a timestamping feature in qpidd that if enabled sets the timestamp field of the AMQP 0-10 delivery-properties when a message arrives at the broker.
There is no equivalent field defined in the AMQP 1.0 specification. Thus this feature is at present not supported over 1.0 (i.e. messages delivered over 1.0 will not have the timestamp set).
An annotation could be defined to convey the timestamp for 1.0 messages. This could also be used in translating between 0-10 and 1.0 formats.
- is related to
-
QPID-8467 [AMQP 1.0] annotations added by broker use string keys rather than symbols, mutates existing symbol keys
-
- Open
-
- links to