src/qpid/broker/amqp/Incoming.cpp
@@ -28,6 +28,7 @@
 #include "qpid/broker/Message.h"
 #include "qpid/broker/Broker.h"
 #include "qpid/log/Statement.h"
+#include "qpid/sys/Time.h"
 
 namespace qpid {
 namespace broker {
@@ -108,7 +109,8 @@ namespace {
 }
 
 DecodingIncoming::DecodingIncoming(pn_link_t* link, Broker& broker, Session& parent, const std::string& source, const std::string& target, const std::string& name)
-    : Incoming(link, broker, parent, source, target, name), sessionPtr(parent.shared_from_this()) {}
+    : Incoming(link, broker, parent, source, target, name), sessionPtr(parent.shared_from_this()), isTimestamping(broker.isTimestamping()) {}
+
 DecodingIncoming::~DecodingIncoming() {}
 
 void DecodingIncoming::readable(pn_delivery_t* delivery)
@@ -146,6 +148,10 @@ void DecodingIncoming::readable(pn_delivery_t* delivery)
 void DecodingIncoming::deliver(boost::intrusive_ptr<qpid::broker::amqp::Message> received, pn_delivery_t* delivery)
 {
     qpid::broker::Message message(received, received);
+    if (isTimestamping) {
+        qpid::sys::Duration d(qpid::sys::AbsTime::epoch(), qpid::sys::AbsTime::now());
+        message.addAnnotation("x-opt-ingress-timestamp",(int64_t)d);
+    }	
     userid.verify(message.getUserId());
     received->begin();
     handle(message, session.getTransaction(delivery));
